Add comments entity, indexes and pagination. Add new api tests.
