# src/main/java/com/example/bookshelf/book/boundary/BookController.java
@@ -1,10 +1,11 @@
 package com.example.bookshelf.book.boundary;
 
+import com.example.bookshelf.PaginatedResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
-import java.util.List;
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/book")
@@ -19,34 +20,34 @@ public class BookController {
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     @ResponseBody
-    public List<BookDTO> getBooks() {
-        return bookService.getAllBooks();
+    public PaginatedResponse<BookWithCommentDTO> getBooks(@RequestParam("pageNumber") int pageNumber, @RequestParam("elementsOnSize") int elementsSize) {
+        return bookService.getAllBooksPaginated(pageNumber, elementsSize);
     }
 
     @GetMapping("/{id}")
     @ResponseStatus(HttpStatus.OK)
     @ResponseBody
-    public BookDTO getBook(@PathVariable Long id) throws BookNotFoundException {
+    public BookWithCommentDTO getBook(@PathVariable UUID id) throws BookNotFoundException {
         return bookService.getBook(id);
     }
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     @ResponseBody
-    public BookDTO create(@Valid @RequestBody BookDTO bookDTO){
+    public BookDTO create(@Valid @RequestBody BookDTO bookDTO) {
         return bookService.saveBook(bookDTO);
     }
 
     @PutMapping("/{id}")
     @ResponseStatus(HttpStatus.OK)
     @ResponseBody
-    public BookDTO updateBook(@PathVariable Long id, @Valid @RequestBody BookDTO bookDTO) throws BookNotFoundException {
+    public BookDTO updateBook(@PathVariable UUID id, @Valid @RequestBody BookDTO bookDTO) throws BookNotFoundException {
         return bookService.updateBook(id, bookDTO);
     }
 
     @DeleteMapping("/{id}")
-    @ResponseStatus(HttpStatus.OK)
-    public void deleteBook(@PathVariable Long id){
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteBook(@PathVariable UUID id) {
         bookService.removeBook(id);
     }
 }
